# cubesat-software

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: format.yml  rust.yml
eps/: Cargo.toml
eps/.cargo/: config.toml
eps/src/: main.rs
eps/src/tasks/: battery.rs  communication.rs  current_monitoring.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/communication/: eps.rs  mod.rs
src/: main.rs
