[package]
name = "eps"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cortex-m stuff
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
# Defmt for logging
defmt = "0.3.10"
defmt-rtt = "0.4.1"
# Executor
embassy-executor = { version = "0.7.0", features = ["executor-thread", "nightly", "arch-cortex-m", "defmt"]}
# Allows future combiners
embassy-futures = { version = "0.1.1", features = ["defmt"]}
# Useful structs for sharing and sending across tasks
embassy-sync = { version = "0.6.2", features = ["defmt"]}
# Time synchronizer
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime-us"]}
# Panic handler
panic-reset = "0.1.1"
# Static, immutable maps
phf = { version = "0.11.3", default-features = false, features = ["macros"] }

# HAL
[dependencies.embassy-stm32]
version = "0.2.0"
features = [
    # TODO: Set to correct chip pac
    "stm32l476vg", 
    "memory-x", 
    "time-driver-any", 
    "chrono", 
    "exti",
    "defmt"]

[[bin]]
name = "eps"
path = "src/main.rs"
test = false
doctest = false
bench = false

